--- a/README
+++ b/README
@@ -17,48 +17,40 @@ Copyright (C) 2011 The CyanogenMod Project
   It is still a work in progress.
 
 
-* How To Build CM7 for HTC marvel
+* How To Build CM9 for HTC Marvel
 
   Make a workspace
 
-  $ cd ~
-  $ mkdir android
-  $ cd android
-  $ mkdir system
-  $ cd system
-
+  $ mkdir -p ~/android/system
+  $ cd ~/android/system
 
   Do repo init & sync
 
-  $ repo init -u git://github.com/CyanogenMod/android.git -b gingerbread
-  $ repo sync -j20
+  $ repo init -u git://github.com/CyanogenMod/android.git -b ics
+
+  Create .repo/local_manifest.xml with the following content:
+
+  <?xml version="1.0" encoding="UTF-8"?>
+  <manifest>
+      <project name="CyanogenMod/android_device_htc_common" path="device/htc/common" revision="refs/heads/gingerbread" />
+      <project name="gladiac/android_device_htc_marvel" path="device/htc/marvel" />
+      <project name="gladiac/proprietary_vendor_htcl" path="vendor/htc" />
+  </manifest>
+
+  $ repo sync
 
   Setup vendor
 
-  $ cd vendor/cyanogen/
-  $ ./get-rommanager
-
-
-  Setup device
-
-  Connect phone to usb abd make sure debugging is avaliable for adb pulls
-
-  $ cd ../../device/htc/marvel/
-  $ ./extract-files.sh # this pulls files from working marvel with most variants of shipped HTC ROM
-  $ cd ../../..
-
+  $ cd vendor/cm
+  $ ./get-prebuilts
 
   Setup environment
 
   $ source build/envsetup.sh
-  $ lunch
-  (select cyanogen_marvel-eng)
+  $ lunch cm_marvel-eng
 
 
-  Build CM7
-
-  $ make acp
-  (to avoid errors on distributed building)
+  Build CM9
 
   $ make -j4 bacon
 
@@ -66,9 +58,7 @@ Copyright (C) 2011 The CyanogenMod Project
 * Thanks
 
   Cyanogen
-  attn1
-  jznomoney (who booted the first marvel on Gingerbread and contributes tons to this device)
-  CyanogenMod team
+  alquez
 
 ----
 EOF
