--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Device configuration for the HTC Marvel
 
 Copyright (C) 2011 The CyanogenMod Project
+Copyright (C) 2011 Andreas Schneider <asn@cryptomilk.org>
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -10,55 +11,75 @@ Copyright (C) 2011 The CyanogenMod Project
 
 ------------------------------------------------------------------
 
-
 * Description
 
   This repository is for CM9 on HTC marvel.
   It is still a work in progress.
 
 
+* Boardinfo
+
+  - Touchscreen
+    Cypress CY8C_TMA
+
+  - Sensors
+    Gsensor: BOSCH_BMA150
+    Compass: AKM8975
+    Battery: TPS65200
+    Light:   CM3602
+
+
 * How To Build CM9 for HTC Marvel
 
-  Make a workspace
+  - Make a workspace
 
-  $ mkdir -p ~/android/system
-  $ cd ~/android/system
+  $ mkdir -p ~/cyanogenmod/system
+  $ cd ~/cyanogenmod/system
 
-  Do repo init & sync
+
+  - Do repo init & sync
 
   $ repo init -u git://github.com/CyanogenMod/android.git -b ics
 
-  Create .repo/local_manifest.xml with the following content:
+
+  - Create .repo/local_manifest.xml with the following content:
 
   <?xml version="1.0" encoding="UTF-8"?>
   <manifest>
+      <remote  name="cryptomilk"
+               fetch="git://git.cryptomilk.org/" />
+
       <project name="CyanogenMod/android_device_htc_common" path="device/htc/common" revision="refs/heads/gingerbread" />
-      <project name="gladiac/android_device_htc_marvel" path="device/htc/marvel" />
-      <project name="gladiac/proprietary_vendor_htc" path="vendor/htc" />
+      <project name="projects/marvel/android_device_htc_marvel.git" path="device/htc/marvel" remote="cryptomilk" />
+      <project name="projects/marvel/android_vendor_htc_proprietary.git" path="vendor/htc" remote="cryptomilk" />
   </manifest>
 
   $ repo sync
 
-  Setup vendor
 
-  $ cd vendor/cm
-  $ ./get-prebuilts
+  - Setup vendor
 
-  Setup environment
+  $ ./vendor/cm/get-prebuilts
+
+
+  - Setup environment
 
   $ source build/envsetup.sh
   $ lunch cm_marvel-eng
 
 
-  Build CM9
+  - Build CM9
 
+  $ export USE_CCACHE=1
   $ make -j4 bacon
 
 
 * Thanks
 
-  Cyanogen
+  CyanogenMod
   alquez
+  Droste
+  pabloPL
 
 ----
 EOF
