--- a/README
+++ b/README
@@ -52,6 +52,7 @@ Copyright (C) 2011 Andreas Schneider <asn@cryptomilk.org>
       <project name="CyanogenMod/android_device_htc_common" path="device/htc/common" revision="refs/heads/gingerbread" />
       <project name="projects/marvel/android_device_htc_marvel.git" path="device/htc/marvel" remote="cryptomilk" />
       <project name="projects/marvel/android_vendor_htc_proprietary.git" path="vendor/htc" remote="cryptomilk" />
+      <project name="projects/marvel/kernel_htc_msm7227.git" path="kernel/htc/msm7227" remote="cryptomilk" />
   </manifest>
 
   $ repo sync
