--- a/libcamera/README
+++ b/libcamera/README
@@ -1,3 +1,1 @@
-This directory contains code for the ICS Camera HAL.
-
-See https://github.com/rapmv78/android_hardware_qcom_camerahal
+This directory contains code for the ICS Camera HAL
